@@ -98,6 +98,7 @@ public:
     int indexOfFile(const QString& filename);
     int indexOfFolder(const QString& filename);
     int indexOfFileGroup(const QString& filename);
+    int indexOfFileCounter(const QString& filename);
     QString newName(const QString& filename)                            const;
 
     QStringList            fileList()                                   const;
