@@ -107,6 +107,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QRadioButton" name="counterAware">
+     <property name="text">
+      <string>File counter aware numbering</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
