@@ -70,4 +70,6 @@ BUGFIXES:
 053 ==> 453630 - Metadata doesn 't always keep it's hierarchy when written with exiftool.
 054 ==> 426951 - digiKam audio issue.
 055 ==> 454318 - Save as Version in Imageeditor not accessible when using external raw editor (rawtherapee).
-056 ==> 
+056 ==> 324967 - Add support of specific increase numbering offset with advance rename tool.
+057 ==> 453275 - Renaming files is not folder aware, even with folder aware option.
+058 ==> 
